--- a/index.html
+++ b/index.html
@@ -1,1 +1,90 @@
-proba
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/html">
+<head lang="en">
+    <meta charset="UTF-8">
+    <title>Black+White</title>
+
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/text.css">
+    <link rel="stylesheet" href="css/960_24_col.css">
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+
+<div class="container_24">
+    <header>
+        <h1 class="clearfix"><a href="#">Black + White</a></h1>
+        <nav>
+            <ul>
+                <li><a href="#">Our services</a></li>
+                <li><a href="#">How we work</a></li>
+                <li><a href="#">Testimonials</a></li>
+                <li><a href="work.html">Work examples</a></li>
+                <li><a href="#"class="selected">Home</a></li>
+            </ul>
+        </nav>
+
+        <div class="banner grid_18">
+            <h2>
+                some slick phrese would go in here to theme suitable for any kind of store .
+            </h2>
+        </div>
+
+        <div class="grid_6 callout"></div>
+
+    </header>
+
+
+    <div class="main clerfix">
+        <div class="grid_9">
+            <h3>services we offer</h3>
+            <p> We are happy to anounce our premium responsive and retina ready magento
+                theme suitable for any kind of store. ...
+            </p>
+            <p>
+                Buy magento theme “Black & White” and get incredible revolution ...
+                Increase performance of your magento by using font icons instead if images. ....
+                We do not provide any integration service.
+            </p>
+            <p><a href="#" class="button">Read More</a></p>
+        </div>
+        <div class="grid_9">
+            <h3>howe we work</h3>
+            <p> We are happy to anounce our premium responsive and retina ready magento
+                theme suitable for any kind of store. ...
+            </p>
+            <p>
+                Buy magento theme “Black & White” and get incredible revolution ...
+                Increase performance of your magento by using font icons instead if images. ....
+                We do not provide any integration service.
+            </p>
+            <p> We are happy to anounce our premium responsive and retina ready magento
+                theme suitable for any kind of store. ...
+            </p>
+            <p><a href="#" class="button">Read More</a></p>
+        </div>
+
+        <div class="div grid_6 block">
+            <blockquote>
+                <p>Clean, elegant typography
+                    matched with sharp lines
+                    and precise spacing lids
+                    to a profesional luuk
+                    and feel.
+                </p>
+
+            </blockquote>
+        </div>
+    </div>
+
+
+    <footer>
+        <p><strong>Blask+White</strong> theme via <a href="http://themeforest.net">themeforest </a>
+        </p>
+    </footer>
+
+
+</div>
+
+</body>
+</html>
